templ-gen/mon-app-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mon-app-gateway
  namespace: lms
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*.elysee-learn.com'
    port:
      name: http
      number: 80
      protocol: HTTP
