templ-gen/mon-app-service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: mon-app-se
  namespace: lms
spec:
  hosts:
  - mon-app.elysee-learn.com
  location: MESH_EXTERNAL
  ports:
  - name: https
    number: 443
    protocol: HTTPS
  resolution: DNS
